--- a/slide/index.html
+++ b/slide/index.html
@@ -23,8 +23,8 @@
       </div>
       <div class="large-8 columns">
         <div class="twentytwenty-container" data-orientation="vertical">
-          <img src="img/1_1.jpg" />
-          <img src="img/1_2.jpg" />
+          <img src="img/IMG_4211.jpg" />
+          <img src="img/IMG_4181.jpg" />
         </div>
       </div>
     </div>
